--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "callsites": "^1.0.0",
     "findup": "^0.1.5",
     "glob": "^5.0.5",
-    "lodash": "^3.7.0"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "chai": "^2.3.0",
-    "mocha": "^2.2.4",
-    "eslint": "^0.20.0",
-    "sinon-chai": "^2.7.0",
-    "sinon": "^1.14.1",
-    "reqres": "^1.2.1"
+    "eslint": "^6.7.1",
+    "mocha": "^6.2.2",
+    "reqres": "^3.0.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^2.7.0"
   }
 }
